admin/css/fastcgi-cache-purge-and-preload-nginx.css
/* ... */
/* Style for the font size and weight of links within tabs */
.ui-tabs .ui-tabs-nav li a {
    font-size: 15px;
    font-weight: 400;
}

/* Style for the bottom border of list items within tabs */
.ui-tabs .ui-tabs-nav li {
    border-bottom: 1px solid #c5c5c5;
}

/* Style for the header of UI widgets */
.ui-widget-header {
    border: 1px solid #fff;
    background: #fff;
}

/* Default styles for narrow screens */
.nppp-premium-wrap {
    width: 100%;
    margin-right: 0;
}

.nppp-premium-widget {
    display: none;
}

/* Flexbox layout for wide screens */
@media screen and (min-width: 768px) {
    .nppp-premium-container {
        display: flex;
        align-items: flex-start;
    }

    .nppp-premium-wrap {
        flex: 0 0 calc(70% - 10px);
        margin-right: 10px;
    }

    .nppp-premium-widget {
        flex: 0 0 calc(30% - 10px);
        display: block;
    }
}

/* Style for the advertisement section */
#nppp-ad {
    background-color: #f9f9f9;
    border: 3px solid #ff9900;
    padding: 20px;
    text-align: center;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin-left: 20px;
    padding-top: 22px;
}

/* Style for the heading within the advertisement section */
#nppp-ad h3 {
    color: #333;
    font-size: 20px;
    margin-bottom: 15px;
    line-height: 1.2;
}

/* Style for images within the advertisement section */
#nppp-ad img {
    width: 90px !important;
}

/* Style for plain lists within the advertisement section */
#nppp-ad .plain-list {
    text-align: left;
    margin-top: 10px;
    list-style-type: circle;
    list-style-position: inside;
}

/* Style for list items within plain lists */
#nppp-ad .plain-list li {
    text-indent: -20px;
    padding-left: 23px;
    line-height: 23px;
    margin: 0;
}

/* Style for buttons within the advertisement section */
#nppp-ad .button {
    background-color: #0073e6;
    color: #fff;
    padding: 10px 20px;
    text-decoration: none;
    border-radius: 5px;
}

/* Hover style for buttons within the advertisement section */
#nppp-ad .button:hover {
    background-color: #0056b3;
}

/* Center align the content within the plugin activation section */
#nppp-plugin-activation {
    text-align: center;
    margin-left: 14px;
}

/* Style for the activation button */
#nppp-activate-button {
    font-size: 20px;
    padding: 10px 20px;
    border-radius: 10px;
    background-color: #4CAF50;
    color: white;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;
}

/* Hover effect for the activation button */
#nppp-activate-button:hover {
    background-color: #45a049;
    color: #333;
}

/* Base styles for the header content */
.nppp-header-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* Styles for the image container */
.nppp-img-container {
    flex: 0 0 auto;
    margin-right: 10px;
}

/* Styles for the image itself */
.nppp-img-container img {
    width: 90px;
    height: auto;
}

/* Styles for the cache buttons */
.nppp-cache-buttons {
    flex: 1;
    display: flex;
    justify-content: flex-start;
    gap: 10px;
}

/* Very cool button style */
.nppp-button {
    display: inline-block;
    padding: 8px 16px;
    border-radius: 5px;
    background-color: #007BFF;
    color: white;
    text-align: center;
    text-decoration: none;
    font-size: 14px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.nppp-button:hover {
    background-color: #0e81ce;
    border-color: #0e81ce;
    color: #FFFFFF;
}

/* Adjustments for small screens */
@media screen and (max-width: 768px) {
    .nppp-img-container img {
        width: 90px;
    }
    .nppp-img-container {
        margin-right: 0;
    }
    .nppp-cache-buttons {
        flex-direction: row;
        justify-content: space-evenly;
        align-items: center;
        gap: 10px;
    }

    .nppp-button {
        font-size: 12px;
    }
}

/* Style for the toggle switch container */
.nppp-onoffswitch {
    position: relative;
    overflow: hidden;
    display: inline-block;
}

/* Hide the default checkbox */
.nppp-onoffswitch-checkbox {
    display: none;
}

/* Style for the toggle switch label */
.nppp-onoffswitch-label {
    cursor: pointer;
    display: inline-block;
    position: relative;
    width: 121px;
    height: 30px;
    font-weight: 600;
    background: #ffffff;
    border: 2px solid #f1f1f1;
    transition: background-color 0.3s;
}

/* Style for the text labels (On and Off) */
.nppp-onoffswitch-inner .nppp-on,
.nppp-onoffswitch-inner .nppp-off {
    position: absolute;
    line-height: 30px;
    font-size: 14px;
    z-index: 2;
    transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
}

.nppp-onoffswitch-inner .nppp-on {
    right: 18px;
}

.nppp-onoffswitch-inner .nppp-off {
    left: 20px;
    color: #23282d;
}

/* Style for the toggle switch handle */
.nppp-onoffswitch-switch {
    display: inline-block;
    position: absolute;
    z-index: 1;
    background: #66b317;
    width: 55px;
    height: 24px;
    top: 3px;
    left: 3px;
    transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
    transform: translateX(0px);
}

/* Adjust styles based on checkbox state */
#nginx_cache_send_mail:checked + .nppp-onoffswitch-label .nppp-onoffswitch-inner .nppp-on {
    color: #23282d;
}

#nginx_cache_send_mail:checked + .nppp-onoffswitch-label .nppp-onoffswitch-switch {
    width: 55px;
    transform: translateX(60px);
    background: #ea1919;
}

/* Show the Off label */
.nppp-onoffswitch-checkbox + .nppp-onoffswitch-label .nppp-off {
    display: block;
}

/* Hide the original checkbox */
#nginx_cache_send_mail {
    position: absolute;
    left: -99em;
}

/* Buttons dsabled */
.disabled {
    pointer-events: none;
    opacity: 0.5;
    cursor: not-allowed;
}
/* ... */

